feat(ApolloQueryPipe): first property of data by default

--- a/examples/hello-world/client/main.html
+++ b/examples/hello-world/client/main.html
@@ -8,7 +8,7 @@
 <h2>List</h2>
 
 <ul>
-  <li *ngFor="let user of users | async | apolloQuery:'users'">
+  <li *ngFor="let user of users | async | apolloQuery">
     {{ user.firstName }} {{ user.lastName }}
   </li>
 </ul>
