feat(Apollo): exactly the same api for queries as in watchQuery
What is new? Mostly the return value of mapped query

It now contains:

* errors - of subsription

* loading - boolean with status

* unsubscribe - just like the result of watchQuery

* refetch

* stopPolling

* startPolling

forceFetch, returnPartialData and pollInterval have been added to mapped queries options which are now exactly the same as watchQuery options

--- a/examples/hello-world/client/main.html
+++ b/examples/hello-world/client/main.html
@@ -10,7 +10,7 @@
 <input type="search" placeholder="Type name..." [(ngModel)]="nameFilter" />
 
 <ul>
-  <li *ngFor="let user of users | async | apolloQuery:'users'">
+  <li *ngFor="let user of users | apolloQuery:'users'">
     {{ user.firstName }} {{ user.lastName }}
   </li>
 </ul>
