--- a/examples/hello-world/client/main.html
+++ b/examples/hello-world/client/main.html
@@ -10,7 +10,7 @@
 <input type="search" placeholder="Type name..." [(ngModel)]="nameFilter" />
 
 <ul>
-  <li *ngFor="let user of users | apolloQuery:'users'">
+  <li *ngFor="let user of data.users">
     {{ user.firstName }} {{ user.lastName }}
   </li>
 </ul>
