feat(Apollo): loading state from the ApolloQueryResult
backwards compatible

--- a/examples/hello-world/client/main.html
+++ b/examples/hello-world/client/main.html
@@ -9,7 +9,9 @@
 
 <input type="search" placeholder="Type name..." [(ngModel)]="nameFilter" />
 
-<ul>
+<div *ngIf="data.loading">loading ...</div>
+
+<ul *ngIf="!data.loading">
   <li *ngFor="let user of data.users">
     {{ user.firstName }} {{ user.lastName }}
   </li>
