--- a/examples/hello-world/client/src/index.html
+++ b/examples/hello-world/client/src/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Hello World</title>
+  <title>Client</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
 </head>
 <body>
   <app-root>Loading...</app-root>
